# build-your-own-ssm

./: .gitignore  README.md  pyproject.toml
docs/: 01_ssm_mathematical_foundations.md  02_hippo_theory.md  03_s4_architecture.md  04_mamba_selective_mechanism.md  05_hardware_aware_algorithm.md  06_implementation_guide.md  07_training_and_evaluation.md  08_benchmarks_and_comparisons.md
examples/: generate.py  train_lm.py
mamba/: __init__.py  config.py
mamba/core/: __init__.py  discretize.py  hippo.py  selective_ssm.py  ssm_base.py
mamba/layers/: __init__.py  mamba_block.py  norms.py  residual.py
mamba/models/: __init__.py  lm_head.py  mamba.py
mamba/ops/: __init__.py  _scan_common.py  causal_conv1d.py  selective_scan_naive.py  selective_scan_parallel.py
mamba/utils/: __init__.py  checkpoint.py  generation.py  training.py
tests/: conftest.py
tests/benchmark/: bench_selective_scan.py
tests/integration/: test_generation.py  test_mamba_model.py
tests/property/: test_scan_equivalence.py  test_ssm_properties.py
tests/unit/: test_causal_conv1d.py  test_discretize.py  test_hippo.py  test_mamba_block.py  test_selective_scan.py  test_selective_ssm.py  test_ssm_base.py  test_training_checkpoint.py
