[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "mamba-from-scratch"
version = "0.1.0"
description = "A from-first-principles implementation of the Mamba selective state space model"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [{ name = "build-your-own-ssm" }]
keywords = ["mamba", "ssm", "state-space-model", "s4", "sequence-modeling", "deep-learning"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
    "torch>=2.0",
    "numpy>=1.24",
]

[project.optional-dependencies]
# Reference implementations used only for correctness comparison in tests.
reference = ["scipy>=1.10"]
# CUDA extras are optional; the pure-PyTorch parallel scan needs no compiled kernel.
cuda = ["triton>=2.1; platform_system == 'Linux'"]
dev = [
    "pytest>=7.4",
    "pytest-benchmark>=4.0",
    "hypothesis>=6.80",
    "scipy>=1.10",
    "black>=23.0",
    "mypy>=1.5",
]

[project.urls]
Homepage = "https://github.com/build-your-own-ssm/mamba-from-scratch"
Documentation = "https://github.com/build-your-own-ssm/mamba-from-scratch/tree/main/docs"

[tool.setuptools.packages.find]
include = ["mamba*"]

[tool.black]
line-length = 88
target-version = ["py310"]

[tool.mypy]
python_version = "3.10"
strict = true
warn_unused_ignores = true
warn_redundant_casts = true
disallow_untyped_defs = true
no_implicit_optional = true
# Third-party libraries without type stubs.
[[tool.mypy.overrides]]
module = ["scipy.*", "pytest.*", "hypothesis.*"]
ignore_missing_imports = true

[tool.pytest.ini_options]
minversion = "7.0"
addopts = "-v --tb=short"
testpaths = ["tests"]
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "benchmark: performance benchmarks, excluded from default CI run",
]
filterwarnings = [
    "ignore::DeprecationWarning",
]
